--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,8 @@
-
 :root {
   /* ******************************************** */
 
   /* ********    Light Mode    ********** */
-  
+
   --sidebarBackground: #fff;
   --sidebarActiveColor: #F6F6F6;
   --sidebarBorderColor: #D9D9D9;
@@ -13,7 +12,7 @@
   --cardsGreyText: #676767;
   --cardsBlueText: #2C6DB5;
   --cardsBgBlueColor: #E1EBF5;
-  --tableAlternateBg : #F5F7FD;
+  --tableAlternateBg: #F5F7FD;
   --textInactive: #FC2222;
   --textActive: #22C55D;
   --tableTextGrey: #929292;
@@ -40,13 +39,13 @@
   --assignedBtnBg: #EBECEC;
   --confirmPaymentBtnText: #fff;
   --confirmPaymentBtnBg: #00CC08;
-  --formControlLoginTextColor : #A6A5A5;
-  --formControlTextColor : #707070;
-  --loginGreyTextColor : #8392AB;
+  --formControlLoginTextColor: #A6A5A5;
+  --formControlTextColor: #707070;
+  --loginGreyTextColor: #8392AB;
   --greyText3: #808080;
-  --profileCardsBg:#DEE5F2;
+  --profileCardsBg: #DEE5F2;
 
-/* ********    Dark Mode    ********** */
+  /* ********    Dark Mode    ********** */
 
   /* --sidebarBackground_dark: #1E1E1E;
   --sidebarActiveColor_dark: #333333;
@@ -59,119 +58,119 @@
   --cardsBgBlueColor_dark: #2A3B4F; */
 
 
-  --font12 : 12px;
-  --font14 : 14px;
-  --font16 : 16px;
-  --font18 : 18px;
-  --font24 : 24px;
-  --font28 : 28px;
-  --font32 : 32px;
-  --font54 : 54px;
+  --font12: 12px;
+  --font14: 14px;
+  --font16: 16px;
+  --font18: 18px;
+  --font24: 24px;
+  --font28: 28px;
+  --font32: 32px;
+  --font54: 54px;
 
-  --lineHeight21 : 21px;
-  --lineHeight24 : 24px;
+  --lineHeight21: 21px;
+  --lineHeight24: 24px;
 
-  --borderRadius4 : 4px;
-  --borderRadius8 : 8px;
-  --borderRadius10 : 10px;
-  --borderRadius12 : 12px;
-  --borderRadius24 : 24px;
-  --borderRadius32 : 32px;
+  --borderRadius4: 4px;
+  --borderRadius8: 8px;
+  --borderRadius10: 10px;
+  --borderRadius12: 12px;
+  --borderRadius24: 24px;
+  --borderRadius32: 32px;
 
-  --fontWeight700 : 700px;
-  --fontWeight600 : 600px;
-  --fontWeight900 : 900px;
+  --fontWeight700: 700px;
+  --fontWeight600: 600px;
+  --fontWeight900: 900px;
 }
 
 body {
   font-family: 'Helvetica Neue', sans-serif !important;
 }
 
-.formControlTextColor{
+.formControlTextColor {
   color: var(--formControlTextColor);
 }
 
-p{
+p {
   margin: 0% !important;
 }
 
-.font12{
+.font12 {
   font-size: var(--font12);
 }
 
-.font14{
+.font14 {
   font-size: var(--font14);
 }
 
-.font16{
+.font16 {
   font-size: var(--font16);
 }
 
-.font18{
+.font18 {
   font-size: var(--font18);
 }
 
-.font24{
+.font24 {
   font-size: var(--font24);
 }
 
-.font28{
+.font28 {
   font-size: var(--font28);
 }
 
-.font32{
+.font32 {
   font-size: var(--font32);
 }
 
-.font54{
+.font54 {
   font-size: var(--font54);
 }
 
-.lineHeight21{
+.lineHeight21 {
   line-height: var(--lineHeight21) !important;
 }
 
-.lineHeight24{
+.lineHeight24 {
   line-height: var(--lineHeight24) !important;
 }
 
-.borderRadius4{
+.borderRadius4 {
   border-radius: var(--borderRadius4) !important;
 }
 
-.borderRadius8{
+.borderRadius8 {
   border-radius: var(--borderRadius8) !important;
 }
 
-.borderRadius10{
+.borderRadius10 {
   border-radius: var(--borderRadius10) !important;
 }
 
-.borderRadius12{
+.borderRadius12 {
   border-radius: var(--borderRadius12) !important;
 }
 
-.borderRadius24{
+.borderRadius24 {
   border-radius: var(--borderRadius24) !important;
 }
 
-.borderRadius32{
+.borderRadius32 {
   border-radius: var(--borderRadius32) !important;
 }
 
-.fontWeight600{
+.fontWeight600 {
   font-weight: var(--fontWeight600) !important;
 }
 
-.fontWeight700{
+.fontWeight700 {
   font-weight: var(--fontWeight700) !important;
 }
 
-.fontWeight900{
+.fontWeight900 {
   font-weight: var(--fontWeight900) !important;
 }
 
-.btn{
+.btn {
   border: none !important;
 }
 
@@ -252,4 +251,48 @@ p{
 
 .pay-btn:hover {
   opacity: 0.8;
+}
+
+.dashboardfont {
+  font-family: Helvetica;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 18px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #676767;
+}
+
+.dashboardprice {
+  font-family: Helvetica;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 20.7px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #2C6DB5;
+}
+
+.dashboardbutton {
+  font-family: Lato;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 22px;
+  text-align: center;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #FFFFFF;
+}
+
+.dashboardshort {
+  font-family: Helvetica;
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 18px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #808080;
 }
